--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		<a href="#" id="dlbtn"><div class="nr_2"><div></div>电脑桌面</div></a>
 	</div>
 </div>
-		<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=123456&site=web&menu=yes">
+		<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=20630700&site=web&menu=yes">
 			<div class="online_service">
 				<div class="os_icon"></div>
 				<div class="os_font">在线客服</div>
@@ -85,7 +85,7 @@
   	<div class="back_wathet1">
   		<div class="bnb_icon_font"> 
   			<div class="../images/wx.png"></div>
-  			<div class="bif_font1">CC彩球</br>线路入口</div>
+  			<div class="bif_font1">万盛AG百家乐168赛车</br>线路入口</div>
   		</div>
   	</div>
   </div>
@@ -100,7 +100,7 @@
 	</div>
 	<div class="col-xs-6 col-sm-2 col-md-2 back_XL">
 		<div class="back_LX">
-		<a target="_blank" href="https://www.dkewl.com" class="LinkTip">
+		<a target="_blank" href="https://ws399.me" class="LinkTip">
 			<div class="de_icon back_gray">
 	  			<div class="div_center">
 	  				<div class="icon_ent2"></div>
@@ -112,7 +112,7 @@
 	</div>
 	<div class="col-xs-6 col-sm-2 col-md-2 back_XL">
 		<div class="back_LX">
-		<a target="_blank" href="https://www.dkewl.com" class="LinkTip" >
+		<a target="_blank" href="https://ws566.me" class="LinkTip" >
 			<div class="de_icon back_gray">
 	  			<div class="div_center">
 	  				<div class="icon_ent2"></div>
@@ -124,7 +124,7 @@
 	</div>
 	<div class="col-xs-6 col-sm-2 col-md-2 back_XL">
 		<div class="back_LX">
-		<a target="_blank" href="https://www.dkewl.com" class="LinkTip">
+		<a target="_blank" href="https://ws577.me" class="LinkTip">
 			<div class="de_icon back_gray">
 	  			<div class="div_center">
 	  				<div class="icon_ent2"></div>
