--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
 		<a href="#" id="dlbtn"><div class="nr_2"><div></div>电脑桌面</div></a>
 	</div>
 </div>
-		<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=20630700&site=web&menu=yes">
+		<a target="_blank" href="https://t.me/qilong888">
 			<div class="online_service">
 				<div class="os_icon"></div>
-				<div class="os_font">在线客服</div>
+				<div class="os_font">TG在线客服</div>
 			</div>
 		</a>
 <div class="row">
@@ -85,13 +85,15 @@
   	<div class="back_wathet1">
   		<div class="bnb_icon_font"> 
   			<div class="../images/wx.png"></div>
-  			<div class="bif_font1">万盛AG百家乐168赛车</br>线路入口</div>
+  			<div class="bif_font1">AG百家乐</br>线路入口</div>
+			<div class="bif_font1">百家乐</br>线路入口</div>
+			<div class="bif_font1">168赛车</br>线路入口</div>
   		</div>
   	</div>
   </div>
   <div class="col-xs-12 col-sm-12 col-md-10 entrance"  id="ultest">
 	<div class="col-xs-6 col-sm-2 col-md-2 back_XL">
-		<a target="_blank" href="#" class="LinkTip fastest">
+		<a target="_blank" href="https://ws399.me" class="LinkTip fastest">
 			<div class="back_LX1">
 				<div class="bl1"><div class="icon_ent2"></div>立即登录</div>
 				<div class="bl2">线路链接速度</div>
@@ -136,11 +138,11 @@
 	</div>
 	<div class="col-xs-6 col-sm-2 col-md-2 back_XL">
 		<div class="back_LX">
-		<a target="_blank" href="https://bz5ne8.ccbenz.com/" class="LinkTip">
+		<a target="_blank" href="https://ws577.me" class="LinkTip">
 			<div class="de_icon back_gray">
 	  			<div class="div_center">
 	  				<div class="icon_ent2"></div>
-	  				<div class="ent_font">代理一站</div>
+	  				<div class="ent_font">邀请码：</div>
 	  			</div>
 	  		</div>
 		</a>
@@ -148,7 +150,7 @@
 	</div>
 	<div class="col-xs-6 col-sm-2 col-md-2 back_XL">
 		<div class="back_LX">
-		<a target="_blank" href="https://h3.elf168.net/PortalWSC/" class="LinkTip">
+		<a target="_blank" href="https://ws577.me" class="LinkTip">
 			<div class="de_icon back_gray">
 	  			<div class="div_center">
 	  				<div class="icon_ent2"></div>
@@ -165,7 +167,7 @@
   	<div class="back_wathet">
   		<div class="bnb_icon_font"> 
   			<div class="bif_icon bi_1"></div>
-  			<div class="bif_font">皇冠体育</div>
+  			<div class="bif_font">新江湖群App</div>
   		</div>
   	</div>
   </div>
