--- a/index.html
+++ b/index.html
@@ -553,17 +553,17 @@
 
         <div class="card">
             <div class="button-group">
-                <a href="https://www.ws399.me/" class="enter-button">
+                <a href="https://ws399.me/" class="enter-button">
                     万盛邀请码30940497
                 </a>
-                <a href="https://www.ws566.me/" class="enter-button">
+                <a href="https://ws566.me/" class="enter-button">
                     万盛邀请码30940497
                 </a>
-                <a href="https://www.ws577.me/" class="enter-button">
+                <a href="https://ws577.me/" class="enter-button">
                     万盛邀请码30940497
                 </a>
                 <a href="https://ya.cn/index.html" class="enter-button">
-                    丝瓜客服:qilong168
+                    丝瓜下载地址
                 </a>
             </div>
             <div style="text-align: center; margin-top: 20px; color: #666;">
@@ -583,9 +583,9 @@
         <div class="card">
             <h4 class="title">永久地址</h4>
             <ul class="link-list">
-                <li><a href="https://www.ws399.me">万盛1邀请码30940497</a></li>
-                <li><a href="https://www.ws566.me">万盛2邀请码30940497</a></li>
-                <li><a href="https://www.ws577.me">万盛3邀请码30940497</a></li>
+                <li><a href="https://ws399.me">万盛1邀请码30940497</a></li>
+                <li><a href="https://ws566.me">万盛2邀请码30940497</a></li>
+                <li><a href="https://ws577.me">万盛3邀请码30940497</a></li>
 				<li><a href="https://t.me/qilong888">TG客服@qilong888</a></li>
             </ul>
         </div>
