--- a/index.html
+++ b/index.html
@@ -583,9 +583,9 @@
         <div class="card">
             <h4 class="title">永久地址</h4>
             <ul class="link-list">
-                <li><a href="https://ws399.me">万盛1邀请码30940497</a></li>
-                <li><a href="https://ws566.me">万盛2邀请码30940497</a></li>
-                <li><a href="https://ws577.me">万盛3邀请码30940497</a></li>
+                <li><a href="https://ws399.me">万盛线路1</a></li>
+                <li><a href="https://ws566.me">万盛线路2</a></li>
+                <li><a href="https://ws577.me">万盛线路3</a></li>
 				<li><a href="https://t.me/qilong888">TG客服@qilong888</a></li>
             </ul>
         </div>
