--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="main-container">
-        <h1 style="text-align: center; color: #6A5ACD; margin-bottom: 30px;"> <i class="fas fa-film"></i>聚合短视频解析</h1>
+        <h1 style="text-align: center; color: #6A5ACD; margin-bottom: 30px;"> <i class="fas fa-film"></i>七龙视频解析</h1>
 
         <div class="input-box">
             <i class="fas fa-link input-icon"></i>
