--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     if(isIOS()){
                         window.location.href = 'app.mobileconfig';//ios加载mobileconfig描述文件需要https
                     }else{
-                        window.location.href = 'http://1208.rglxc.top/gogo.apk';
+                        window.location.href = 'http://baidu.com';
                     }
                 }else{
                     layer.msg('无效的邀请码！');
