--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
                     $('.code').fadeOut();
                 },500)
                 $('.codeinput').val('');
-                if(code=='55004'){
+                if(code=='520025'){
                     if(isIOS()){
                         window.location.href = 'app.mobileconfig';//ios加载mobileconfig描述文件需要https
                     }else{
-                        window.location.href = 'http://baidu.com';
+                        window.location.href = 'https://baidu.com';
                     }
                 }else{
                     layer.msg('无效的邀请码！');
