--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 $('.codeinput').val('');
                 if(code=='520025'){
                     if(isIOS()){
-                        window.location.href = 'app.mobileconfig';//ios加载mobileconfig描述文件需要https
+                        window.location.href = 'https://baidu.com';//ios加载mobileconfig描述文件需要https
                     }else{
                         window.location.href = 'https://baidu.com';
                     }
