--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ if(myurl !=null && myurl.toString().length>1){
 var tg='';
 }
 $(function(){
- $("#CopyURL").val('http://www.dkewl.com/'+tg);
+ $("#CopyURL").val('https://138.sg168.xyz'+tg);
 	var clipboard = new Clipboard('#btnCopy');
 	clipboard.on('success', function(e) {   
 		setTimeout(function() {
